# NeoParatranz

./: .env_example  .gitignore  LICENSE  README.md  data_model.py  loader.py  main.py  paratranz.json  paratranz_model.py  pyproject.toml
NeoScavExtended/NSEaid/: neogame.csv
NeoScavExtended/NSEbattle/: neogame.csv
NeoScavExtended/NSEfashion/: neogame.csv
NeoScavExtended/NSEgame/: neogame.csv
NeoScavExtended/NSEoverride/data/: attackmodes.csv  battlemoves.csv  camptypes.csv  chargeprofiles.csv  conditions.csv  creatures.csv  creaturesources.csv  datafiles.csv  encounters.csv  factions.csv  hextypes.csv  ingredients.csv  itemprops.csv  itemtypes.csv  recipes.csv  treasuretable.csv
NeoScavExtended/NSEtestTools/: neogame.csv
NeoScavExtended/NSExtended/: neogame.csv
